test/testdata/functions/anonymous/missing_1_arg_error.lox
var add = fun(a, b) {
  print a + b;
};

add(1); // error: (anonymous)() missing 1 argument: b
